--- a/students_submissions/8903318/lab5.ipynb
+++ b/students_submissions/8903318/lab5.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "[442 rows x 10 columns]"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 319,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,41 +259,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define polynomial model\n",
-    "def cross_val_polynomial(degree):\n",
-    "    model = make_pipeline(PolynomialFeatures(degree), LinearRegression())\n",
-    "    scores = cross_val_score(model, Xdata, ydata, cv=5, scoring='neg_mean_squared_error')\n",
-    "    mse = -np.mean(scores)\n",
-    "    model.fit(Xdata, ydata)\n",
-    "    y_pred = model.predict(Xdata)\n",
-    "    r2 = r2_score(ydata, y_pred)\n",
-    "    mae = mean_absolute_error(ydata, y_pred)\n",
-    "    return mse, r2, mae\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 225,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create polynomial models ranging degree from 0 to 8\n",
+    "degrees = range(9)\n",
     "results = []\n",
-    "degrees = list(range(9))\n",
-    "cv_mse = []\n",
-    "cv_r2 = []\n",
-    "cv_mae = []\n",
     "\n",
     "for degree in degrees:\n",
-    "    mse, r2, mae = cross_val_polynomial(degree)\n",
-    "    results.append((degree, mse, r2, mae))\n",
-    "    cv_mse.append(mse)\n",
-    "    cv_r2.append(r2)\n",
-    "    cv_mae.append(mae)\n"
+    "    poly_features = PolynomialFeatures(degree=degree)\n",
+    "    X_poly = poly_features.fit_transform(Xdata)\n",
+    "\n",
+    "    model = LinearRegression()\n",
+    "    scores = cross_val_score(model, X_poly, ydata, cv=5, scoring='r2')\n",
+    "    mean_r2 = np.mean(scores)\n",
+    "    std_r2 = np.std(scores)\n",
+    "\n",
+    "    scores_mae = cross_val_score(\n",
+    "        model, X_poly, ydata, cv=5, scoring='neg_mean_absolute_error')\n",
+    "    mean_mae = -np.mean(scores_mae)\n",
+    "    std_mae = np.std(scores_mae)\n",
+    "\n",
+    "    results.append((degree, mean_r2, std_r2, mean_mae, std_mae))\n"
    ]
   },
   {
@@ -306,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -331,93 +318,103 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Degree</th>\n",
-       "      <th>MSE</th>\n",
-       "      <th>R-Squared</th>\n",
-       "      <th>MAE</th>\n",
+       "      <th>R-Squared (Mean)</th>\n",
+       "      <th>R-Squared (Std)</th>\n",
+       "      <th>MAE (Mean)</th>\n",
+       "      <th>MAE (Std)</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>5.982413e+03</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>6.576457e+01</td>\n",
+       "      <td>-0.027506</td>\n",
+       "      <td>0.036772</td>\n",
+       "      <td>66.045624</td>\n",
+       "      <td>3.474660</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>2.993081e+03</td>\n",
-       "      <td>0.517748</td>\n",
-       "      <td>4.327745e+01</td>\n",
+       "      <td>0.482316</td>\n",
+       "      <td>0.049269</td>\n",
+       "      <td>44.276499</td>\n",
+       "      <td>2.100110</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>1.209951e+04</td>\n",
-       "      <td>0.216262</td>\n",
-       "      <td>5.309728e+01</td>\n",
+       "      <td>-1.108849</td>\n",
+       "      <td>1.658661</td>\n",
+       "      <td>72.322249</td>\n",
+       "      <td>22.655922</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>1.168776e+06</td>\n",
-       "      <td>0.118958</td>\n",
-       "      <td>5.844402e+01</td>\n",
+       "      <td>-203.419417</td>\n",
+       "      <td>225.878361</td>\n",
+       "      <td>342.052260</td>\n",
+       "      <td>142.438464</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>3.402772e+06</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>8.058853e-09</td>\n",
+       "      <td>-571.083108</td>\n",
+       "      <td>369.891883</td>\n",
+       "      <td>657.260477</td>\n",
+       "      <td>159.475902</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>5</td>\n",
-       "      <td>2.644547e+06</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>5.202514e-09</td>\n",
+       "      <td>-436.856887</td>\n",
+       "      <td>379.100423</td>\n",
+       "      <td>562.993636</td>\n",
+       "      <td>59.917202</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>6</td>\n",
-       "      <td>1.056474e+07</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>5.294524e-09</td>\n",
+       "      <td>-1694.222101</td>\n",
+       "      <td>2629.834958</td>\n",
+       "      <td>742.589052</td>\n",
+       "      <td>190.836052</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>7</td>\n",
-       "      <td>3.475883e+07</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.058780e-08</td>\n",
+       "      <td>-5530.894075</td>\n",
+       "      <td>9518.586954</td>\n",
+       "      <td>1032.681725</td>\n",
+       "      <td>393.439617</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>8</td>\n",
-       "      <td>1.012450e+08</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>8.232438e-09</td>\n",
+       "      <td>-16076.255117</td>\n",
+       "      <td>28049.952579</td>\n",
+       "      <td>1475.658532</td>\n",
+       "      <td>706.280274</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Degree           MSE  R-Squared           MAE\n",
-       "0       0  5.982413e+03   0.000000  6.576457e+01\n",
-       "1       1  2.993081e+03   0.517748  4.327745e+01\n",
-       "2       2  1.209951e+04   0.216262  5.309728e+01\n",
-       "3       3  1.168776e+06   0.118958  5.844402e+01\n",
-       "4       4  3.402772e+06   1.000000  8.058853e-09\n",
-       "5       5  2.644547e+06   1.000000  5.202514e-09\n",
-       "6       6  1.056474e+07   1.000000  5.294524e-09\n",
-       "7       7  3.475883e+07   1.000000  1.058780e-08\n",
-       "8       8  1.012450e+08   1.000000  8.232438e-09"
+       "   Degree  R-Squared (Mean)  R-Squared (Std)   MAE (Mean)   MAE (Std)\n",
+       "0       0         -0.027506         0.036772    66.045624    3.474660\n",
+       "1       1          0.482316         0.049269    44.276499    2.100110\n",
+       "2       2         -1.108849         1.658661    72.322249   22.655922\n",
+       "3       3       -203.419417       225.878361   342.052260  142.438464\n",
+       "4       4       -571.083108       369.891883   657.260477  159.475902\n",
+       "5       5       -436.856887       379.100423   562.993636   59.917202\n",
+       "6       6      -1694.222101      2629.834958   742.589052  190.836052\n",
+       "7       7      -5530.894075      9518.586954  1032.681725  393.439617\n",
+       "8       8     -16076.255117     28049.952579  1475.658532  706.280274"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,15 +422,15 @@
    "source": [
     "\n",
     "#cross validation results\n",
-    "df_results = pd.DataFrame(\n",
-    "    results, columns=['Degree', 'MSE', 'R-Squared', 'MAE'])\n",
+    "results_table = pd.DataFrame(results, columns=[\n",
+    "                             'Degree', 'R-Squared (Mean)', 'R-Squared (Std)', 'MAE (Mean)', 'MAE (Std)'])\n",
     "\n",
-    "df_results\n"
+    "results_table\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -465,51 +462,44 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>MSE</td>\n",
-       "      <td>1.708953e+07</td>\n",
-       "      <td>3.155562e+07</td>\n",
+       "      <td>R-Squared</td>\n",
+       "      <td>-2723.709416</td>\n",
+       "      <td>5311.522620</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>R-Squared</td>\n",
-       "      <td>6.503298e-01</td>\n",
-       "      <td>4.113155e-01</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>MAE</td>\n",
-       "      <td>2.450926e+01</td>\n",
-       "      <td>2.794162e+01</td>\n",
+       "      <td>555.097784</td>\n",
+       "      <td>487.306636</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Metric          Mean  Standard Deviation\n",
-       "0        MSE  1.708953e+07        3.155562e+07\n",
-       "1  R-Squared  6.503298e-01        4.113155e-01\n",
-       "2        MAE  2.450926e+01        2.794162e+01"
+       "      Metric         Mean  Standard Deviation\n",
+       "0  R-Squared -2723.709416         5311.522620\n",
+       "1        MAE   555.097784          487.306636"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Summary\n",
-    "mean_mse = np.mean(cv_mse)\n",
-    "mean_r2 = np.mean(cv_r2)\n",
-    "mean_mae = np.mean(cv_mae)\n",
-    "std_mse = np.std(cv_mse)\n",
-    "std_r2 = np.std(cv_r2)\n",
-    "std_mae = np.std(cv_mae)\n",
+    "# Calculate the mean and standard deviation of the metrics\n",
+    "\n",
+    "mean_r2_all = results_table['R-Squared (Mean)'].mean()\n",
+    "std_r2_all = results_table['R-Squared (Mean)'].std()\n",
+    "mean_mae_all = results_table['MAE (Mean)'].mean()\n",
+    "std_mae_all = results_table['MAE (Mean)'].std()\n",
+    "\n",
     "\n",
     "summary = pd.DataFrame(\n",
-    "    {'Metric': ['MSE', 'R-Squared', 'MAE'],\n",
-    "     'Mean': [mean_mse, mean_r2, mean_mae],\n",
-    "     'Standard Deviation': [std_mse, std_r2, std_mae]\n",
+    "    {'Metric': [ 'R-Squared', 'MAE'],\n",
+    "     'Mean': [mean_r2_all, mean_mae_all],\n",
+    "     'Standard Deviation': [ std_r2_all, std_mae_all]\n",
     "     }\n",
     ")\n",
     "\n",
@@ -526,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -534,16 +524,27 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Best model based on R-Squared: Degree 4\n",
-      "Best model based on MAE: Degree 5\n"
+      "Best model based on R-Squared: Degree               1.000000\n",
+      "R-Squared (Mean)     0.482316\n",
+      "R-Squared (Std)      0.049269\n",
+      "MAE (Mean)          44.276499\n",
+      "MAE (Std)            2.100110\n",
+      "Name: 1, dtype: float64\n",
+      "Best model based on MAE: Degree               1.000000\n",
+      "R-Squared (Mean)     0.482316\n",
+      "R-Squared (Std)      0.049269\n",
+      "MAE (Mean)          44.276499\n",
+      "MAE (Std)            2.100110\n",
+      "Name: 1, dtype: float64\n"
      ]
     }
    ],
    "source": [
-    "best_model_r2 = df_results['R-Squared'].idxmax()\n",
-    "best_model_mae = df_results['MAE'].idxmin()\n",
-    "print(f\"\\nBest model based on R-Squared: Degree {best_model_r2}\")\n",
-    "print(f\"Best model based on MAE: Degree {best_model_mae}\")"
+    "best_model_r2 = results_table.loc[results_table['R-Squared (Mean)'].idxmax()]\n",
+    "best_model_mae = results_table.loc[results_table['MAE (Mean)'].idxmin()]\n",
+    "\n",
+    "print(f\"\\nBest model based on R-Squared: {best_model_r2}\")\n",
+    "print(f\"Best model based on MAE: {best_model_mae}\")"
    ]
   },
   {
@@ -552,7 +553,7 @@
    "metadata": {},
    "source": [
     "####  The best model will consists of the highest R-Squared value and the lowest MAE value.\n",
-    "#### Based on the df_results, the models with the highest R-Squared value is Degree-4 and the lowest MAE value is the Degree-5"
+    "#### Based on the results_table, the models with the highest R-Squared value and the lowest MAE value is the Degree:1"
    ]
   }
  ],
