--- a/students_submissions/7526387/lab6.ipynb
+++ b/students_submissions/7526387/lab6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -77,6 +77,9 @@
    ],
    "source": [
     "from sklearn import datasets\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "from sklearn.metrics import confusion_matrix, precision_score, recall_score\n",
+    "from sklearn.model_selection import train_test_split, cross_val_predict, cross_validate\n",
     "\n",
     "iris = datasets.load_iris()\n",
     "\n",
@@ -88,10 +91,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "y_train_virginica = (y_train == 2)\n",
+    "y_test_virginica = (y_test == 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-3 {color: black;background-color: white;}#sk-container-id-3 pre{padding: 0;}#sk-container-id-3 div.sk-toggleable {background-color: white;}#sk-container-id-3 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-3 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-3 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-3 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-3 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-3 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-3 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-3 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-3 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-3 div.sk-item {position: relative;z-index: 1;}#sk-container-id-3 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-3 div.sk-item::before, #sk-container-id-3 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-3 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-3 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-3 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-3 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-3 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-3 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-3 div.sk-label-container {text-align: center;}#sk-container-id-3 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-3 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>SGDClassifier(random_state=42)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" checked><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">SGDClassifier</label><div class=\"sk-toggleable__content\"><pre>SGDClassifier(random_state=42)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "SGDClassifier(random_state=42)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sgd_clf = SGDClassifier(random_state=42)\n",
+    "sgd_clf.fit(X_train, y_train_virginica)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[64, 17],\n",
+       "       [ 0, 39]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train_pred = cross_val_predict(sgd_clf, X_train, y_train_virginica, cv=3)\n",
+    "cm = confusion_matrix(y_train_virginica, y_train_pred)\n",
+    "cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Row 2 has been classified as  True and should be  False\n",
+      "Row 6 has been classified as  True and should be  False\n",
+      "Row 11 has been classified as  True and should be  False\n",
+      "Row 12 has been classified as  True and should be  False\n",
+      "Row 15 has been classified as  True and should be  False\n",
+      "Row 18 has been classified as  True and should be  False\n",
+      "Row 20 has been classified as  True and should be  False\n",
+      "Row 22 has been classified as  True and should be  False\n",
+      "Row 25 has been classified as  True and should be  False\n",
+      "Row 29 has been classified as  True and should be  False\n",
+      "Row 34 has been classified as  True and should be  False\n",
+      "Row 45 has been classified as  True and should be  False\n",
+      "Row 59 has been classified as  True and should be  False\n",
+      "Row 62 has been classified as  True and should be  False\n",
+      "Row 73 has been classified as  True and should be  False\n",
+      "Row 79 has been classified as  True and should be  False\n",
+      "Row 93 has been classified as  True and should be  False\n"
+     ]
+    }
+   ],
+   "source": [
+    "incorrectIndexes = []\n",
+    "for row_index, (input, prediction, label) in enumerate(zip (X_train, y_train_pred, y_train_virginica)):\n",
+    "  if prediction != label:\n",
+    "    incorrectIndexes.append(row_index)\n",
+    "    print('Row', row_index, 'has been classified as ', prediction, 'and should be ', label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6.7 3.1 4.4 1.4]\n",
+      "[6.4 3.2 4.5 1.5]\n",
+      "[6.  3.4 4.5 1.6]\n",
+      "[6.7 3.1 4.7 1.5]\n",
+      "[5.5 2.4 3.7 1. ]\n",
+      "[6.6 3.  4.4 1.4]\n",
+      "[5.7 2.9 4.2 1.3]\n",
+      "[5.6 3.  4.5 1.5]\n",
+      "[5.8 2.7 4.1 1. ]\n",
+      "[5.  2.  3.5 1. ]\n",
+      "[5.6 2.7 4.2 1.3]\n",
+      "[5.4 3.  4.5 1.5]\n",
+      "[5.9 3.2 4.8 1.8]\n",
+      "[6.  2.7 5.1 1.6]\n",
+      "[6.3 2.5 4.9 1.5]\n",
+      "[6.1 2.9 4.7 1.4]\n",
+      "[5.5 2.6 4.4 1.2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index in incorrectIndexes:\n",
+    "    print(X_train[index])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'fit_time': array([0.00157166, 0.00143194, 0.00140691]),\n",
+       " 'score_time': array([0.00084782, 0.00069427, 0.00058651]),\n",
+       " 'test_score': array([0.725, 0.9  , 0.95 ])}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_validate(estimator=sgd_clf, X=X_train, y=y_train_virginica, cv=3, scoring=\"accuracy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6964285714285714"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "precision_score(y_train_virginica, y_train_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recall_score(y_train_virginica, y_train_pred)"
+   ]
   }
  ],
  "metadata": {
