--- a/students_submissions/8889436/lab6.ipynb
+++ b/students_submissions/8889436/lab6.ipynb
@@ -14,12 +14,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Using SciKit-Learn, train a logistic regression model on the Iris dataset. Use all four features. Define only 2 labels: virginica and non-virginica. See the logistic regression notebook presented in class for a demonstration on how to set up these labels (3 points)."
+    "### 1. Using SciKit-Learn, train a logistic regression model on the Iris dataset. Use all four features. Define only 2 labels: virginica and non-virginica. See the logistic regression notebook presented in class for a demonstration on how to set up these labels (3 points)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +29,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.datasets import load_iris\n",
+    "from sklearn.model_selection import cross_val_score, KFold\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from sklearn.metrics import precision_score\n",
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +57,7 @@
        "sklearn.utils._bunch.Bunch"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +84,7 @@
        " 'data_module']"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +200,7 @@
        "4                5.0               3.6                1.4               0.2"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +225,7 @@
        "Name: target, dtype: int32"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +245,7 @@
        "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +347,7 @@
        "4                5.0               3.6                1.4               0.2"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +383,7 @@
        "        True,  True,  True,  True,  True,  True])"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,12 +397,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Splitting the dataset into train and test data"
+    "#### Train Test Split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,24 +414,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Logistic Regression Model"
+    "#### Logistic Regression Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-5 {color: black;background-color: white;}#sk-container-id-5 pre{padding: 0;}#sk-container-id-5 div.sk-toggleable {background-color: white;}#sk-container-id-5 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-5 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-5 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-5 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-5 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-5 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-5 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-5 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-5 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-5 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-5 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-5 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-5 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-5 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-5 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-5 div.sk-item {position: relative;z-index: 1;}#sk-container-id-5 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-5 div.sk-item::before, #sk-container-id-5 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-5 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-5 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-5 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-5 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-5 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-5 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-5 div.sk-label-container {text-align: center;}#sk-container-id-5 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-5 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-5\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(random_state=42)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-5\" type=\"checkbox\" checked><label for=\"sk-estimator-id-5\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(random_state=42)</pre></div></div></div></div></div>"
+       "<style>#sk-container-id-9 {color: black;background-color: white;}#sk-container-id-9 pre{padding: 0;}#sk-container-id-9 div.sk-toggleable {background-color: white;}#sk-container-id-9 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-9 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-9 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-9 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-9 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-9 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-9 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-9 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-9 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-9 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-9 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-9 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-9 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-9 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-9 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-9 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-9 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-9 div.sk-item {position: relative;z-index: 1;}#sk-container-id-9 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-9 div.sk-item::before, #sk-container-id-9 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-9 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-9 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-9 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-9 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-9 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-9 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-9 div.sk-label-container {text-align: center;}#sk-container-id-9 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-9 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-9\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(random_state=42)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-9\" type=\"checkbox\" checked><label for=\"sk-estimator-id-9\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(random_state=42)</pre></div></div></div></div></div>"
       ],
       "text/plain": [
        "LogisticRegression(random_state=42)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,8 +442,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Prediction"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +471,7 @@
        "        True, False, False])"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +488,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Provide insights about the model prediction. This is an open-ended part. But you can look into questions such as in which data instances is the model wrong? are there any shared properties for these cases? and _how is the model doing, across a set of performance metrics such as accuracy and confusion metric. (3 points)"
+    "### 2. Provide insights about the model prediction. This is an open-ended part. But you can look into questions such as in which data instances is the model wrong? are there any shared properties for these cases? and _how is the model doing, across a set of performance metrics such as accuracy and confusion metric. (3 points)"
    ]
   },
   {
@@ -487,12 +496,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Accuracy:"
+    "#### Cross-Validation :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-validation score:  [1.         0.95833333 0.875      0.95833333 0.95833333]\n",
+      "Average accuracy :  0.95\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Perfoming cross-validation to check models perfomance across different folds\n",
+    "\n",
+    "cv_score = cross_val_score(log_model, X_train, y_train, cv=5)\n",
+    "print(\"Cross-validation score: \", cv_score)\n",
+    "print(\"Average accuracy : \", np.mean(cv_score))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- After running cross-validation on the model we find that the model accuracy varies on each fold with perfect accuracy of 100% in the first fold and the minimum accuracy of about 87% on the third fold.\n",
+    " - The average accuaracy of the model was found to be 95%."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Accuracy:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -521,12 +569,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Confusion Metric:"
+    "#### Confusion Metric:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [
     {
@@ -557,12 +605,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Precision and Recall :"
+    "#### Precision and Recall :"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
