made some changes in md

--- a/students_submissions/8889436/lab6.ipynb
+++ b/students_submissions/8889436/lab6.ipynb
@@ -636,7 +636,7 @@
    "metadata": {},
    "source": [
     "- A precision score of 1.0 was obtained which means that all the instances  that were predicited as positive by the model were True Positive.\n",
-    "- A recall score of 1.0 means that the model correctly predicted all the positive instance of the dataset and ther were no false negative."
+    "- A recall score of 1.0 means that the model correctly predicted all the positive instance of the dataset and ther were no False Negative."
    ]
   }
  ],
