Jia Zeng lab6 modify html

--- a/students_submissions/8936740/Lab6.ipynb
+++ b/students_submissions/8936740/Lab6.ipynb
@@ -135,7 +135,12 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "---\n",
+    "# Magic code for Convert to HTML\n",
+    "\n",
+    "jupyter nbconvert --to html ./students_submissions/8936740/Lab6.ipynb --output-dir ./docs/8936740 --TagRemovePreprocessor.enabled=True --TagRemovePreprocessor.remove_input_tags=\"['noshow']\""
+   ]
   }
  ],
  "metadata": {
