--- a/students_submissions/8889436/lab7.ipynb
+++ b/students_submissions/8889436/lab7.ipynb
@@ -5,6 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# LAB7 - SUDHAN SHRESTHA - 8889436\n",
     "# Performance Metrics for Classification \n",
     "Note: This notebook is adapted from [Geron's chapter 3 notebook](https://github.com/ageron/handson-ml3/blob/main/03_classification.ipynb) in accordance with the [Apache v2 License](https://github.com/ageron/handson-ml3/blob/main/LICENSE).\n",
     "\n",
