Lab7 submitted including html

--- a/students_submissions/8903318/lab7.ipynb
+++ b/students_submissions/8903318/lab7.ipynb
@@ -41,9 +41,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**\n",
+    "**Answers:**\n",
     "* In a classification problem, we aim to predict or assign a class or category to a given observation or set of observations based on their features or characteristics.\n",
-    "\n",
     "* A classifier is an algorithm or mathematical function that takes input data and assigns it to specific categories or classes based on patterns and relationships within the data. "
    ]
   },
@@ -1240,7 +1239,7 @@
    ],
    "source": [
     "recall = cm[1, 1] / (cm[1, 0] + cm[1, 1])\n",
-    "print(recall)"
+    "recall"
    ]
   },
   {
