--- a/students_submissions/8894408/lab7.ipynb
+++ b/students_submissions/8894408/lab7.ipynb
@@ -554,6 +554,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Overall, this is a balanced dataset. The variation between different datapoint values are lower and therefore there is not much visible skewness in the data."
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -813,7 +820,8 @@
    "source": [
     "    Student answer:\n",
     "    => Out of all the samples provided to the model on first fold, the model has correctly labelled identified 95% digits as 5 and not 5. On the flip side, for the 5% of the samples, the model has incorrectly identified the label as 5 or not 5.\n",
-    "    => The simple handwritten rule can be given to predict all numbers as \"not 5\". Because of uniform distribution, 90% of the input samples are expected to be \"not 5\" and the model will produce 90% accuracy."
+    "    => The simple handwritten rule can be given to predict all numbers as \"not 5\". Because of uniform distribution, 90% of the input samples are expected to be \"not 5\" and the model will produce 90% accuracy.\n",
+    "    => SGDClassifier, unlike the handwritten rule, base their prediction on the feature or properties of the data it was trained on. Therefore, it is expected to produce better prediction and better accuracy than handwritten rule for unseen inputs."
    ]
   },
   {
@@ -895,7 +903,7 @@
    "source": [
     "    Student answer:\n",
     "    => Dummy classifier produces an accuracy of around 90%.\n",
-    "    => The DummyClassifier is similar to the handwritten rule where they both return \"False\" for all the samples without taking into account any of the features of the sample."
+    "    => The DummyClassifier is similar to the handwritten rule where they both return \"False\" for all the samples without taking into account any of the features of the sample. In constrast, SGDClassifier predicts data based on features it was trained on."
    ]
   },
   {
@@ -1869,13 +1877,6 @@
    "source": [
     "recall_score(y_train_5, y_train_pred_forest)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
