--- a/students_submissions/8894805/lab8.ipynb
+++ b/students_submissions/8894805/lab8.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Using PyTorch: \n",
+    "# Using PyTorch: \n",
     "  * Calculate the dot product between two vectors each of length 3 (1.5 points)"
    ]
   },
@@ -87,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.  Using Tensorflow: \n",
+    "# Using Tensorflow: \n",
     "  * Calculate the dot product between the same vectors as above (re-define them in Tensorflow) (1.5 points)\n"
    ]
   },
