--- a/students_submissions/8894805/lab9.ipynb
+++ b/students_submissions/8894805/lab9.ipynb
@@ -275,9 +275,9 @@
     "\n",
     "# Build the neural network model\n",
     "model = Sequential([\n",
-    "    Flatten(input_shape=(784,)),  # Flatten the 28x28 images into a 1D array\n",
-    "    Dense(128, activation='relu'),   # Hidden layer with 128 neurons and ReLU activation\n",
-    "    Dense(10, activation='softmax')  # Output layer with 10 neurons (one for each class) and softmax activation\n",
+    "    Flatten(input_shape=(784,)), \n",
+    "    Dense(128, activation='relu'), \n",
+    "    Dense(10, activation='softmax')\n",
     "])\n",
     "\n",
     "# Compile the model\n",
