--- a/students_submissions/8902545/lab10.ipynb
+++ b/students_submissions/8902545/lab10.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using Keras Datasets, obtain the fMNIST data set. Explore and describe it as you would do with any new dataset that you start working with (2 points)."
+    "Obtain dataset"
    ]
   },
   {
@@ -85,17 +85,7 @@
     "\n",
     "# Output the top classes\n",
     "image_tally_sorted[:10]\n",
-    "## we will use only top 3\n",
-    "# [(<DirEntry 'RUFOUS TREPE'>, 263),\n",
-    "#  (<DirEntry 'HOUSE FINCH'>, 248),\n",
-    "#  (<DirEntry 'D-ARNAUDS BARBET'>, 233),\n",
-    "#  (<DirEntry 'OVENBIRD'>, 233),\n",
-    "#  (<DirEntry 'ASIAN GREEN BEE EATER'>, 220),\n",
-    "#  (<DirEntry 'SWINHOES PHEASANT'>, 216),\n",
-    "#  (<DirEntry 'WOOD DUCK'>, 214),\n",
-    "#  (<DirEntry 'CASPIAN TERN'>, 213),\n",
-    "#  (<DirEntry 'RED BILLED TROPICBIRD'>, 212),\n",
-    "#  (<DirEntry 'WOOD THRUSH'>, 211)]"
+    "## we will use only top 3"
    ]
   },
   {
